Add buy orders controller
